--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a platforming game that I am working on.  It features a tile-based map.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+	"dev":"nodemon ./index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Tallented-Code-bot/platformer/issues"
   },
-  "homepage": "https://github.com/Tallented-Code-bot/platformer#readme"
+  "homepage": "https://github.com/Tallented-Code-bot/platformer#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.12"
+  }
 }
