--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a platforming game that I am working on.  It features a tile-based map.",
   "main": "index.js",
   "scripts": {
-	"dev":"nodemon ./index.js"
+    "dev": "nodemon ./index.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/Tallented-Code-bot/platformer#readme",
   "devDependencies": {
     "nodemon": "^2.0.12"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
