--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,5 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/node,visualstudiocode,windows
 
 README.html
+
+.eslintrc.json
